# EarleyParserPractice

./: CMakeLists.txt  EarleyParser.cpp  EarleyParser.h  README.md  SyntaticRule.txt  Syntaticvocab.txt
UseEarleyParser/: UseEarleyParser.cpp
